# web

hw1/src/: main.py  new_book.csv  notes_save.csv
hw2/helper/: Dockerfile  pyproject.toml  requirements.txt
hw2/helper/helper/: classes.py  notes.py
hw3/: Sorter.py  part2.py
web_hw5/: data.json  main.py  test.py
